--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Homework 4</title>
     </head>
     <body style="background-color:rgb(211, 248, 228);">
-        <p><strong><a href="../index.html">Перейти в галлерею</a></strong></p>
+        <p><strong><a href="./pages/gallery.html">Перейти в галлерею</a></strong></p>
         <h1>Моя шпаргалка по основным командам Git</h1>
 <section id="idp40330992">
 <h3 id="git-add">git add</h3>
