--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body style="background-color:rgb(211, 248, 228);">
         <p><strong><a href="./pages/gallery.html">Перейти в галлерею</a></strong></p>
-        <h1>Моя шпаргалка по основным командам Git</h1>
+        <h1>Моя шпаргалка по основным командам git</h1>
 <section id="idp40330992">
 <h3 id="git-add">git add</h3>
 <p>Команда&nbsp;<code>git add</code>&nbsp;добавляет содержимое рабочей директории в индекс (staging area) для последующего коммита. По умолчанию&nbsp;<code>git commit</code>&nbsp;использует лишь этот индекс, так что вы можете использовать&nbsp;<code>git add</code>&nbsp;для сборки слепка вашего следующего коммита.</p>
