homework4 final_version

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Homework 4</title>
     </head>
 
-    <body style="background-color:rgb(211, 248, 228);">
+    <body style="background: linear-gradient(to bottom, rgb(109, 205, 214) 0%, rgba(3, 76, 82, 0.26) 100%);">
         <p><strong><a href="./pages/gallery.html">Перейти в галлерею</a></strong></p>
         <h1>Моя шпаргалка по основным командам git</h1>
         <section id="idp40330992">
